# 2024-P7-vietngyn

./: docker-compose.yaml  endpoints.http  main.tf  pyproject.toml
todo/tasks/: ical.py
todo/views/: routes.py
